--- a/报错日常.md
+++ b/报错日常.md
@@ -1,5 +1,5 @@
 
-第一个关于an-design-vue的坑
+关于an-design-vue的坑
 ===========
 在我使用ant-design-vue的时候出现了下面这个错误
 
@@ -7,11 +7,27 @@
 
 在网上搜也搜不到，只能去照着文档再跑一次流程参考文档链接如下: https://2x.antdv.com/docs/vue/getting-started-cn 跑完一次后发现ant-design-vue 从1.7.6变成了2.2.2，问题解决...
 
-
-第二个关于vue-router的坑
+关于vue-router的坑
 ==========
 does not provide an export named 'createRouter'
 这个报错是因为vue-Router的版本是V3，createRouter这个函数是V4的，执行这边这个语句更新一下npm i --save vue-router@next
 我用的是vite所以直接执行npm run dev (注意这里可能需要清除缓存vite -force)
 
 参考链接:https://www.cnblogs.com/duxing/p/14504182.html
+
+关于an-design-vue的坑
+========
+想消除router-link下划线，以及点击后变白色的方法
+在对应的vue文件下添加下列代码
+ <style scoped>
+.router-link-active {
+  text-decoration: none;
+  color: white;
+}
+a{
+  text-decoration: none;
+  color: white;
+}
+</style>
+a指文字不带下划线且为白色，router-link-active指点击后变为白色。
+参考文章：https://blog.csdn.net/weixin_43900888/article/details/115678695
