--- a/报错日常.md
+++ b/报错日常.md
@@ -31,3 +31,13 @@ a{
 </style>
 a指文字不带下划线且为白色，router-link-active指点击后变为白色。
 参考文章：https://blog.csdn.net/weixin_43900888/article/details/115678695
+
+
+关于vue3的坑
+============================
+一开始我打算在vite项目的main.js中完成应用配置，如下代码:
+const app=createApp(App)
+app.config.globalProperties.$request = request
+
+当我在vue文件中通过this调用这个$request的时候报错了，输出this这个变量是undefined，原来Vue3的setup在created前就执行了所以无法获取上下文，需要Vue包的getCurrentInstance获取上下文
+参考文章:https://blog.csdn.net/qq_45369827/article/details/116036665
