--- a/报错日常.md
+++ b/报错日常.md
@@ -41,3 +41,25 @@ app.config.globalProperties.$request = request
 
 当我在vue文件中通过this调用这个$request的时候报错了，输出this这个变量是undefined，原来Vue3的setup在created前就执行了所以无法获取上下文，需要Vue包的getCurrentInstance获取上下文
 参考文章:https://blog.csdn.net/qq_45369827/article/details/116036665
+
+关于vue3的坑
+============================
+实现父子组件通信过程中，遇到了emit不会用的情况，父组件事件必须要定义在子组件标签内，否则不会生效,正确如下：
+父组件：
+<template>
+ <child @event="function" />
+ </template>
+子组件：
+const { proxy }= getCurrentInstance()
+proxy.$emit('event')
+这样就能实现子组件调用父组件方法了
+
+父组件调用子组件方法：
+父组件
+<template>
+ <child ref='child' />
+ </template>
+ <script>
+  proxy.$refs.child.func
+ </script>
+ 这里的func是子组件定义的方法，这样就能实现两个组件的交互了
