--- a/报错日常.md
+++ b/报错日常.md
@@ -63,3 +63,10 @@ proxy.$emit('event')
   proxy.$refs.child.func
  </script>
  这里的func是子组件定义的方法，这样就能实现两个组件的交互了
+ 
+ 关于vue-router的坑
+============================
+今天用vue-router做登陆验证的时候出现了下列问题：Detected an infinite redirection in a navigation guard when going from "/" to "/login". Aborting to avoid a Stack Overflow. This will break in production if not fixed.
+注意
+======
+因为本人用了router.beforeEach前置守卫，但没有添加next()，故导致这个问题报错
