--- a/报错日常.md
+++ b/报错日常.md
@@ -67,6 +67,11 @@ proxy.$emit('event')
  关于vue-router的坑
 ============================
 今天用vue-router做登陆验证的时候出现了下列问题：Detected an infinite redirection in a navigation guard when going from "/" to "/login". Aborting to avoid a Stack Overflow. This will break in production if not fixed.
+
 注意
 ======
 因为本人用了router.beforeEach前置守卫，但没有添加next()，故导致这个问题报错
+
+关于vue-cookies的坑
+===================
+后端设置好cookies后，前端无法获取cookies的情况，首先查看浏览器是否存在cookies，如果不存在则是后端设置cookies值失败，如果存在但获取失败，则是因为后端cookies没有设置httpOnly: false（默认true的原因是以减少身份盗窃），设置httpOnly为true后，前端就可以正常获取cookies值了
