--- a/报错日常.md
+++ b/报错日常.md
@@ -75,3 +75,9 @@ proxy.$emit('event')
 关于vue-cookies的坑
 ===================
 后端设置好cookies后，前端无法获取cookies的情况，首先查看浏览器是否存在cookies，如果不存在则是后端设置cookies值失败，如果存在但获取失败，则是因为后端cookies没有设置httpOnly: false（默认true的原因是以减少身份盗窃），设置httpOnly为true后，前端就可以正常获取cookies值了
+
+
+使用v-for时注意参数位置否则会报以下错误
+Cannot use 'in' operator to search for 'path' in 0
+错误顺序(index,value)
+正确顺序(value,index)
